# agentype

./: .gitignore  AGENTS.md  LICENSE  README.md  RELEASE.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml  publish-skills.yml  publish.yml
src/agentype/: __init__.py  analysis.py  card.py  collector.py  llm.py  paths.py  signals.py
src/agentype/sources/: __init__.py  base.py  claude.py  codex.py  gemini.py  nanobot.py  nanobot_compat.py  openclaw.py  opencode.py  pi.py  utils.py
tests/: test_analysis.py  test_card.py  test_cli.py  test_sources.py  test_token_usage.py
